--- a/src/Backoffice/Pages/Products/Delete.cshtml
+++ b/src/Backoffice/Pages/Products/Delete.cshtml
@@ -25,16 +25,16 @@
             @Html.DisplayFor(model => model.ProductModel.Description)
         </dd>        
         <dt>
-            @Html.DisplayNameFor(model => model.ProductModel.ProductTypeId)
+            @Html.DisplayNameFor(model => model.ProductModel.CatalogTypeId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductModel.ProductType.Code)
+            @Html.DisplayFor(model => model.ProductModel.CatalogType.Code)
         </dd>        
         <dt>
-            @Html.DisplayNameFor(model => model.ProductModel.IllustrationId)
+            @Html.DisplayNameFor(model => model.ProductModel.CatalogIllustrationId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductModel.Illustration.Code)
+            @Html.DisplayFor(model => model.ProductModel.CatalogIllustration.Code)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductModel.Price)
