--- a/src/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Backoffice/Pages/Products/Details.cshtml
@@ -24,16 +24,16 @@
             @Html.DisplayFor(model => model.ProductModel.Description)
         </dd>        
         <dt>
-            @Html.DisplayNameFor(model => model.ProductModel.ProductTypeId)
+            @Html.DisplayNameFor(model => model.ProductModel.CatalogTypeId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductModel.ProductType.Code)
+            @Html.DisplayFor(model => model.ProductModel.CatalogType.Code)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ProductModel.IllustrationId)
+            @Html.DisplayNameFor(model => model.ProductModel.CatalogIllustrationId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProductModel.Illustration.Code)
+            @Html.DisplayFor(model => model.ProductModel.CatalogIllustration.Code)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductModel.Price)
@@ -57,42 +57,42 @@
                 <thead>
                     <tr>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.ProductAttributes[0].Type)
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Type)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.ProductAttributes[0].Code)
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Code)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.ProductAttributes[0].Name)
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Name)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.ProductAttributes[0].Price)
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Price)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.ProductAttributes[0].ProductSKU)
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].ProductSKU)
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                    @if (Model.ProductModel?.ProductAttributes?.Count > 0)
+                    @if (Model.ProductModel?.CatalogAttributes?.Count > 0)
                     {
-                        for (int i = 0; i < Model.ProductModel.ProductAttributes.Count; i++)
+                        for (int i = 0; i < Model.ProductModel.CatalogAttributes.Count; i++)
                         {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(model => model.ProductModel.ProductAttributes[i].Type)
+                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Type)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(model => model.ProductModel.ProductAttributes[i].Code)
+                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Code)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(model => model.ProductModel.ProductAttributes[i].Name)
+                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(model => model.ProductModel.ProductAttributes[i].Price)
+                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Price)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(model => model.ProductModel.ProductAttributes[i].ProductSKU)
+                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].ProductSKU)
                                 </td>
                             </tr>
                         }
