--- a/src/Backoffice/Pages/Category/Create.cshtml
+++ b/src/Backoffice/Pages/Category/Create.cshtml
@@ -14,9 +14,19 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group required">
-                <label asp-for="Category.Name" class="control-label"></label>                
-                <input asp-for="Category.Name" class="form-control" />                
+                <label asp-for="Category.Name" class="control-label"></label>
+                <input asp-for="Category.Name" class="form-control" />
                 <span asp-validation-for="Category.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group required">
+                <label asp-for="Category.Order" class="control-label"></label>
+                <input asp-for="Category.Order" class="form-control" />
+                <span asp-validation-for="Category.Order" class="text-danger"></span>
+            </div>
+            <div class="form-group required">
+                <label asp-for="Category.Position" class="control-label"></label>
+                <select asp-for="Category.Position" class="form-control" asp-items="ViewBag.PositionList"></select>
+                <span asp-validation-for="Category.Position" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-default" />
