--- a/src/Backoffice/Pages/Category/Edit.cshtml
+++ b/src/Backoffice/Pages/Category/Edit.cshtml
@@ -18,6 +18,16 @@
                 <input asp-for="Category.Name" class="form-control" />
                 <span asp-validation-for="Category.Name" class="text-danger"></span>
             </div>
+            <div class="form-group required">
+                <label asp-for="Category.Order" class="control-label"></label>
+                <input asp-for="Category.Order" class="form-control" />
+                <span asp-validation-for="Category.Order" class="text-danger"></span>
+            </div>
+            <div class="form-group required">
+                <label asp-for="Category.Position" class="control-label"></label>
+                <select asp-for="Category.Position" class="form-control" asp-items="ViewBag.PositionList"></select>
+                <span asp-validation-for="Category.Position" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="Category.Id" />
             <div class="form-group">
                 <input type="submit" value="Gravar" class="btn btn-default" />
