--- a/src/Backoffice/Pages/Category/Index.cshtml
+++ b/src/Backoffice/Pages/Category/Index.cshtml
@@ -13,12 +13,18 @@
 <table class="table table-pagination">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Categories[0].Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Categories[0].NrTypeProducts)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Categories[0].Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Categories[0].Order)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Categories[0].Position)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Categories[0].NrTypeProducts)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -27,6 +33,12 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Order)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Position)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NrTypeProducts)
