--- a/src/Backoffice/Pages/Category/Create.cshtml
+++ b/src/Backoffice/Pages/Category/Create.cshtml
@@ -28,6 +28,13 @@
                 <select asp-for="Category.Position" class="form-control" asp-items="ViewBag.PositionList"></select>
                 <span asp-validation-for="Category.Position" class="text-danger"></span>
             </div>
+            <div class="form-group required">
+                <label asp-for="Category.ParentId" class="control-label"></label>
+                <select asp-for="Category.ParentId" class="form-control" asp-items="ViewBag.CategoryList">
+                    <option></option>
+                </select>
+                <span asp-validation-for="Category.ParentId" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-default" />
             </div>
