--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -122,11 +122,25 @@ h1{
     }
 }
 
-
 .navbar-dark .navbar-nav a:hover {
     border-bottom: 3px solid #fff;
     color: #fff;
 }
 .navbar-dark .navbar-nav .nav-link {
     color:#fff;
+}
+
+.dropdown-menu {
+    background-color: transparent;
+    color: #fff;
+    border: none;
+}
+
+.dropdown-item {
+    color: #fff !important;    
+}
+
+.dropdown-item:hover {
+    border: 3px solid #fff !important;
+    background-color: transparent;
 }
