--- a/src/Web/Pages/Index.cshtml
+++ b/src/Web/Pages/Index.cshtml
@@ -1,13 +1,52 @@
 ﻿@page "{pageId?}"
 @{
-    ViewData["Title"] = "Catalog";
+    ViewData["Title"] = "Loja";
     @model IndexModel
 }
-<section class="esh-catalog-hero">
-    <div class="container">
-        <img class="esh-catalog-title" src="../images/main_banner_text.png" />
+
+<div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+            <img class="d-block img-fluid" src="http://via.placeholder.com/1120x453" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h3>First Slide</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="http://via.placeholder.com/1120x453" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h3>Second Slide</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="http://via.placeholder.com/1120x453" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h3>Third Slide</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
     </div>
-</section>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<div class="news-heading text-center">
+    <h2>Novidades</h2>
+    <img width="395" height="26" src="~/images/coração-rosa.png" />
+</div>
 
 <section class="esh-catalog-filters">
     <div class="container">
