--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -92,8 +92,7 @@ a:visited {
         transition: color 0.35s;
     }
 
-/* DamaShopWeb App Layout */
-h1{
+h1 {
     color: #000000;
     font-family: "Lily Script One", Sans-serif;
     font-size: 41px;
@@ -101,7 +100,15 @@ h1{
     font-style: normal;
 }
 
+h2 {
+    color: #ef7c8d;
+    font-family: "Lily Script One", Sans-serif;
+    font-size: 41px;
+    font-weight: 100;
+    line-height: 1.4em
+}
 
+/* DamaShopWeb App Header */
 .background_gradient {
     background-color: transparent;
     background-image: linear-gradient(180deg, #5fcbcb 0%, #cdefef 100%);
@@ -114,7 +121,10 @@ h1{
 @media screen and (max-width: 992px) {
     .brand-image {
         display: none;
-    }    
+    }
+    .ul-social {
+        display:none;
+    }
 }
 @media screen and (min-width: 992px) {
     #brand-mobile-image {
@@ -143,4 +153,41 @@ h1{
 .dropdown-item:hover {
     border: 3px solid #fff !important;
     background-color: transparent;
+}
+
+.social-links {
+    text-align: center;    
+}
+
+.social-links a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: 2px solid #fff;
+    border-radius: 50px;
+    margin-right: 15px;
+    cursor: pointer;
+}
+
+.social-links a i {
+    padding: 18px 15px;
+    font-size: 20px;
+    color: #909090;
+}
+
+/* Carousel */
+.carousel-caption p {
+    font-size: 20px;
+    line-height: 1.4;
+}
+
+/* Make .svg files in the carousel display properly in older browsers */
+.carousel-inner .item img[src$=".svg"] {
+    width: 100%;
+}
+
+/* Main Page */
+
+.news-heading {
+    padding: 50px 50px;
 }
