--- a/src/Backoffice/Pages/_Layout.cshtml
+++ b/src/Backoffice/Pages/_Layout.cshtml
@@ -37,6 +37,7 @@
                     <li><a asp-page="/ProductType/Index">Tipos de Produto</a></li>
                     <li><a asp-page="/Illustrations/Index">Ilustrações</a></li>
                     <li><a asp-page="/Products/Index">Produtos</a></li>
+                    <li><a asp-page="/ShopConfig/Index">Loja</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
