fix shopconfig saving file method

--- a/src/Backoffice/Pages/ShopConfig/Delete.cshtml
+++ b/src/Backoffice/Pages/ShopConfig/Delete.cshtml
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(model => model.ShopConfigDetailModel.PictureUri)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ShopConfigDetailModel.PictureUri)
+            <img src="@Model.ShopConfigDetailModel.PictureUri" class="img-responsive" />
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ShopConfigDetailModel.HeadingText)
