--- a/src/Backoffice/Pages/Index.cshtml
+++ b/src/Backoffice/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <img src="~/images/dama backoffice.jpg" width="100%" alt="Dama Backoffice" />
+        <img src="~/images/dama_backoffice.jpg" width="100%" alt="Dama Backoffice" />
     </div>
 </div>
 <div class="row">
