--- a/src/Backoffice/Pages/ShopConfig/Create.cshtml
+++ b/src/Backoffice/Pages/ShopConfig/Create.cshtml
@@ -13,11 +13,11 @@
     <div class="col-md-4">
         <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="ShopConfigDetailModel.PictureUri" class="control-label"></label>
-                <input asp-for="ShopConfigDetailModel.PictureUri" class="form-control" />
+                <input asp-for="ShopConfigDetailModel.PictureUri" class="form-control" disabled />
                 <span asp-validation-for="ShopConfigDetailModel.PictureUri" class="text-danger"></span>
-            </div>*@
+            </div>
             <div class="form-group">
                 <label asp-for="ShopConfigDetailModel.HeadingText" class="control-label"></label>
                 <input asp-for="ShopConfigDetailModel.HeadingText" class="form-control" />
