--- a/src/Backoffice/Pages/ShopConfig/Edit.cshtml
+++ b/src/Backoffice/Pages/ShopConfig/Edit.cshtml
@@ -11,12 +11,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ShopConfigDetailModel.PictureUri" class="control-label"></label>
-                <input asp-for="ShopConfigDetailModel.PictureUri" class="form-control" />
+                <input asp-for="ShopConfigDetailModel.PictureUri" class="form-control" disabled />
                 <span asp-validation-for="ShopConfigDetailModel.PictureUri" class="text-danger"></span>
+                <img src="@Model.ShopConfigDetailModel.PictureUri" class="img-responsive" />
             </div>
             <div class="form-group">
                 <label asp-for="ShopConfigDetailModel.HeadingText" class="control-label"></label>
@@ -43,6 +44,12 @@
                 <label asp-for="ShopConfigDetailModel.IsActive" class="form-check-label"></label>
 
                 <span asp-validation-for="ShopConfigDetailModel.IsActive" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ShopConfigDetailModel.Picture" class="control-label"></label>
+
+                <input type="file" asp-for="ShopConfigDetailModel.Picture" class="form-control" />
+                <span asp-validation-for="ShopConfigDetailModel.Picture" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="ShopConfigDetailModel.Id" />
             <input type="hidden" asp-for="ShopConfigDetailModel.ShopConfigId" />
