--- a/src/Backoffice/Pages/ShopConfig/Create.cshtml
+++ b/src/Backoffice/Pages/ShopConfig/Create.cshtml
@@ -48,6 +48,7 @@
                 <label asp-for="ShopConfigDetailModel.Picture" class="control-label"></label>
 
                 <input type="file" asp-for="ShopConfigDetailModel.Picture" class="form-control" />
+                <small>(1120x453)</small>
                 <span asp-validation-for="ShopConfigDetailModel.Picture" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="ShopConfigDetailModel.ShopConfigId" />
