--- a/src/Web/Pages/Components/Menu/Default.cshtml
+++ b/src/Web/Pages/Components/Menu/Default.cshtml
@@ -1,5 +1,5 @@
-﻿@using DamaShopWeb.Web.ViewComponents
-@model Menu.MenuComponentViewModel
+﻿@using DamaShopWeb.Web.ViewModels
+@model MenuComponentViewModel
 
 <ul class="navbar-nav mx-auto w-100 justify-content-end">
     @foreach (var item in Model.Left)
