--- a/src/Backoffice/Pages/ShopConfig/Edit.cshtml
+++ b/src/Backoffice/Pages/ShopConfig/Edit.cshtml
@@ -18,6 +18,7 @@
                 <input asp-for="ShopConfigDetailModel.PictureUri" class="form-control" disabled />
                 <span asp-validation-for="ShopConfigDetailModel.PictureUri" class="text-danger"></span>
                 <img src="@Model.ShopConfigDetailModel.PictureUri" class="img-responsive" />
+                <input type="hidden" asp-for="ShopConfigDetailModel.PictureUri" />
             </div>
             <div class="form-group">
                 <label asp-for="ShopConfigDetailModel.HeadingText" class="control-label"></label>
