--- a/src/Web/Pages/Index.cshtml
+++ b/src/Web/Pages/Index.cshtml
@@ -4,51 +4,48 @@
     @model IndexModel
 }
 
-<div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-            <img class="d-block img-fluid" src="http://via.placeholder.com/1120x453" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h3>First Slide</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img class="d-block img-fluid" src="http://via.placeholder.com/1120x453" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h3>Second Slide</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img class="d-block img-fluid" src="http://via.placeholder.com/1120x453" alt="Third slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h3>Third Slide</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            </div>
+@if (Model.CatalogModel.Banners?.Count > 0)
+{
+    <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
+        <ol class="carousel-indicators">
+            @for (int i = 0; i < Model.CatalogModel.Banners.Count; i++)
+            {
+                <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i == 0? "active": "")"></li>
+            }
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            @foreach (var item in Model.CatalogModel.Banners)
+            {
+                <div class="carousel-item @(Model.CatalogModel.Banners[0] == item ? "active": "") @item.LinkClass" uri="@item.LinkButtonUri">
+                    <img class="d-block img-fluid" src="@item.PictureUri" alt="@item.HeadingText">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>@item.HeadingText</h3>
+                        <p>@item.ContentText</p>
+                        @if (!string.IsNullOrEmpty(item.LinkButtonText) && !string.IsNullOrEmpty(item.LinkButtonUri))
+                        {
+                            <a class="btn btn-primary" href="@item.LinkButtonUri" role="button">@item.LinkButtonText</a>
+                        }
+                    </div>
+                </div>
+            }
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+}
 
 <div class="news-heading text-center">
     <h2>Novidades</h2>
     <img width="395" height="26" src="~/images/coração-rosa.png" />
 </div>
 
-<section class="esh-catalog-filters">
+@*<section class="esh-catalog-filters">
     <div class="container">
         <form method="get">
             <label class="esh-catalog-label" data-title="brand">
@@ -60,7 +57,7 @@
             <input class="esh-catalog-send" type="image" src="images/arrow-right.svg" />
         </form>
     </div>
-</section>
+</section>*@
 
 <div class="container">
 
@@ -86,3 +83,13 @@
         </div>
     }
 </div>
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('.bannerLink').on('click', function () {
+                var uri = $(this).attr('uri');
+                window.location.href = uri;
+            });
+        });
+    </script>
+}
