--- a/src/Web/Pages/_Layout.cshtml
+++ b/src/Web/Pages/_Layout.cshtml
@@ -84,13 +84,31 @@
         <footer class="esh-app-footer">
             <div class="container">
                 <article class="row">
-
-                    <section class="col-sm-6"></section>
-
-                    <section class="col-sm-6">
-                        <div class="esh-app-footer-text hidden-xs"> e-ShopOnWeb. All rights reserved </div>
+                    <section class="offset-sm-2 col-sm-4">
+                        <div>
+                            <img width="319px" src="~/images/flor-com-logo-1.png" />
+                        </div>
+                        <div class="esh-app-footer-text hidden-xs"> © Copyright 2017 Dama no Jornal | All Rights Reserved </div>
                     </section>
-
+                    <section class="col-sm-4 footer-links text-center">
+                        <div class="footer-link text-center">
+                            <a href="#">FAQ</a>
+                        </div>
+                        <div class="footer-link text-center">
+                            <a href="#">Eventos</a>
+                        </div>
+                        <div class="footer-link text-center">
+                            <a href="#">Contactos</a>
+                        </div>
+                        <div class="footer-link text-center text-nowrap">
+                            <a href="#">Termos e Condições</a>
+                        </div>
+                        <div class="footer-link text-center">
+                            <i class="fab fa-facebook-f fa-inverse"></i>
+                            <i class="fab fa-instagram fa-inverse"></i>
+                            <i class="fab fa-google-plus-g fa-inverse"></i>
+                        </div>
+                    </section>
                 </article>
             </div>
         </footer>
