--- a/src/Web/wwwroot/css/catalog/catalog.component.css
+++ b/src/Web/wwwroot/css/catalog/catalog.component.css
@@ -85,21 +85,23 @@
   width: 100%; }
 
 .esh-catalog-button {
-  background-color: #83D01B;
-  border: 0;
-  color: #FFFFFF;
-  cursor: pointer;
-  font-size: 1rem;
-  height: 3rem;
-  margin-top: 1rem;
-  transition: all 0.35s;
-  width: 80%; }
+    background-color: #f5b0b9;
+    border: 0;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-size: 1rem;
+    height: 3rem;
+    margin-top: 1rem;
+    transition: all 0.35s;
+    width: 80%;
+}
   .esh-catalog-button.is-disabled {
     opacity: .5;
     pointer-events: none; }
-  .esh-catalog-button:hover {
-    background-color: #4a760f;
-    transition: all 0.35s; }
+    .esh-catalog-button:hover {
+        background-color: #ef7e8e;
+        transition: all 0.35s;
+    }
 
 .esh-catalog-name {
   font-size: 1rem;
@@ -113,5 +115,5 @@
   font-weight: 900;
   text-align: center; }
   .esh-catalog-price::before {
-    content: '$'; }
+    content: '€'; }
 
