--- a/src/Backoffice/Pages/Products/Delete.cshtml
+++ b/src/Backoffice/Pages/Products/Delete.cshtml
@@ -23,13 +23,13 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ProductModel.Description)
-        </dd>        
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductModel.CatalogTypeId)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ProductModel.CatalogType.Code)
-        </dd>        
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProductModel.CatalogIllustrationId)
         </dt>
@@ -41,6 +41,36 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ProductModel.Price)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.ShowOnShop)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.ShowOnShop)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.IsNew)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.IsNew)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.IsFeatured)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.IsFeatured)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.PictureUri)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.PictureUri)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.Picture)
+        </dt>
+        <dd>
+            <img src="@Model.ProductModel.PictureUri" />
         </dd>
     </dl>
     
