--- a/src/Web/wwwroot/css/app.component.css
+++ b/src/Web/wwwroot/css/app.component.css
@@ -1,11 +1,16 @@
 ﻿.esh-app-footer {
-  background-color: #000000;
-  border-top: 1px solid #EEEEEE;
-  margin-top: 2.5rem;
-  padding-bottom: 2.5rem;
-  padding-top: 2.5rem;
-  width: 100%; }
+    background-color: #EF7C8D;
+    border-top: 1px solid #EEEEEE;
+    margin-top: 2.5rem;
+    padding-bottom: 2.5rem;
+    padding-top: 2.5rem;
+    width: 100%;
+}
   .esh-app-footer-brand {
     height: 50px;
     width: 230px; }
 
+.esh-app-footer-text {
+    color: #fff;
+    font-size: 11px;
+}
