--- a/src/Backoffice/Pages/Products/Create.cshtml
+++ b/src/Backoffice/Pages/Products/Create.cshtml
@@ -39,7 +39,7 @@
                 <span asp-validation-for="ProductModel.Price" class="text-danger"></span>
             </div>
             <div class="form-check">
-                <input asp-for="ProductModel.ShowOnShop" class="form-check-input" checked/>
+                <input asp-for="ProductModel.ShowOnShop" class="form-check-input" checked />
                 <label asp-for="ProductModel.ShowOnShop" class="form-check-label"></label>
                 <span asp-validation-for="ProductModel.ShowOnShop" class="text-danger"></span>
             </div>
@@ -58,6 +58,12 @@
                 <input type="file" asp-for="ProductModel.Picture" class="form-control" />
                 <small>(quadrado)</small>
                 <span asp-validation-for="ProductModel.Picture" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ProductModel.OtherPictures" class="control-label"></label>
+                <input type="file" asp-for="ProductModel.OtherPictures" class="form-control" multiple />
+                <small>(Podes escolher várias fotos ao mesmo tempo)</small>
+                <span asp-validation-for="ProductModel.OtherPictures" class="text-danger"></span>
             </div>
         </div>
     </div>
